fixing the top search bar padding/spacing and the accessories list in search results

--- a/src/packages/modules/search-results-z07/css/search-results-z07.scss
+++ b/src/packages/modules/search-results-z07/css/search-results-z07.scss
@@ -56,6 +56,10 @@
     }
     .search-form {
       margin-bottom: 30px;
+      overflow: hidden;
+    }
+    .search-left {
+      float: left;
     }
     .search-label {
       display: inline-block;
@@ -66,7 +70,7 @@
       height: 30px;
     }
     .search {
-      width: 74%;
+      width: 80%;
       padding: 2px;
       margin-right: 10px;
       background-color: transparent;
@@ -76,11 +80,13 @@
     }
     .search:focus {
       outline: none;
-
+    }
+    .search-right {
+      float: right;
     }
     .clear-search {
       display: inline-block;
-      margin-right: 20px;
+      margin-top: 10px;
       height: 34px;
       width: 34px;
       background: url(../../img/search-results-z07/icon-erase.png) no-repeat 0 0;
@@ -188,6 +194,14 @@
   .reviews-copy {
     margin-bottom: 10px;
   }
+  
+  .rv-module {
+    margin: 0;
+  }
+  
+  .sony-dot-nav {
+    display: none;
+  }
 
   .rv-module .slimgrid {
     margin: 0;
@@ -195,6 +209,13 @@
 
   .sony-carousel-wrapper {
     height: auto;
+  }
+  .sony-carousel-wrapper.grid {
+    width: 100%;
+  }
+  
+  .product-name {
+    color: $gray20;
   }
 
   .rv-module {
